--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ languagem: python
 python:
   - 3.10
 install:
-  - pip install - q -r requirements-dev.txt
+  - pip install - q -r requirements-dev.txt codecov
 script:
   - flake8
-  - pytest libpythonpro
+  - pytest libpython-jessica --cov=libpython-jessica
+after_success:
+  - codecov
