--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,7 @@ languagem: python
 python:
   - 3.10
 install:
-  - pip install - q -r requirements-dev.txt codecov
+  - pip install - q -r requirements-dev.txt
 script:
   - flake8
-  - pytest libpython-jessica --cov=libpython-jessica
-after_success:
-  - codecov
+  - pytest libpythonpro
